[gd_scene load_steps=5 format=3 uid="uid://cax40kgn23m3q"]

[ext_resource type="Script" uid="uid://bq6d71fqsv1h6" path="res://world.gd" id="1_fj7yv"]
[ext_resource type="Script" uid="uid://c8jktfgrt1snq" path="res://knife_chop.gd" id="2_tlwt5"]
[ext_resource type="PackedScene" uid="uid://xinvbq0sm0mf" path="res://food_chunk.tscn" id="3_tlwt5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_036b0"]
size = Vector2(447, 196)

[node name="World" type="Node2D"]
script = ExtResource("1_fj7yv")

[node name="knifeChop" type="Line2D" parent="."]
z_index = 1
width = 5.0
default_color = Color(1, 0.184314, 0, 1)
script = ExtResource("2_tlwt5")

[node name="foodChunks" type="Node2D" parent="."]
z_index = 1

[node name="foodChunk" parent="foodChunks" instance=ExtResource("3_tlwt5")]
position = Vector2(167, 83)
polygon = PackedVector2Array(-2.58249, 3.55429, 332, -1, 335, 310, 1, 309)

[node name="chopBtn" type="Button" parent="."]
offset_left = 891.0
offset_top = 36.0
offset_right = 1030.0
offset_bottom = 115.0
text = "Chop"

[node name="sliceBtn" type="Button" parent="."]
offset_left = 893.0
offset_top = 223.0
offset_right = 1022.0
offset_bottom = 293.0
text = "Slice"

[node name="grabBtn" type="Button" parent="."]
offset_left = 892.0
offset_top = 128.0
offset_right = 1026.0
offset_bottom = 204.0
toggle_mode = true
text = "Grab"

[node name="fryingpan" type="Area2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="fryingpan"]
color = Color(0.531237, 0.551193, 0.653891, 1)
polygon = PackedVector2Array(614, 382, 1057, 386, 1057, 579, 611, 579)

[node name="CollisionShape2D" type="CollisionShape2D" parent="fryingpan"]
position = Vector2(835, 482)
shape = SubResource("RectangleShape2D_036b0")

[connection signal="strokeFinished" from="knifeChop" to="." method="_on_knife_chop_stroke_finished"]
[connection signal="pressed" from="chopBtn" to="." method="_on_chop_btn_pressed"]
[connection signal="pressed" from="sliceBtn" to="." method="_on_slice_btn_pressed"]
[connection signal="pressed" from="grabBtn" to="." method="_on_grab_btn_pressed"]
[connection signal="area_entered" from="fryingpan" to="." method="_on_fryingpan_area_entered"]
[connection signal="area_exited" from="fryingpan" to="." method="_on_fryingpan_area_exited"]
